src/x502api.h


#define X502_DEVNAME_SIZE      32
#define X502_SERIAL_SIZE       32
#define X502_MAC_ADDR_SIZE     6
typedef enum {
    X502_DEVFLAGS_DAC_PRESENT           = 0x00000001,
    X502_DEVFLAGS_GAL_PRESENT           = 0x00000002,
    X502_DEVFLAGS_BF_PRESENT            = 0x00000004,
    X502_DEVFLAGS_IFACE_SUPPORT_USB     = 0x00000100,
    X502_DEVFLAGS_IFACE_SUPPORT_ETH     = 0x00000200,
    X502_DEVFLAGS_IFACE_SUPPORT_PCI     = 0x00000400,
    X502_DEVFLAGS_INDUSTRIAL            = 0x00008000,
    X502_DEVFLAGS_FLASH_DATA_VALID      = 0x00010000,
    X502_DEVFLAGS_FLASH_ADC_CALIBR_VALID = 0x00020000,
    X502_DEVFLAGS_FLASH_DAC_CALIBR_VALID = 0x00040000,
    X502_DEVFLAGS_FPGA_LOADED            = 0x00800000,
    X502_DEVFLAGS_DEVREC_OPENED          = 0x01000000
} t_x502_dev_flags;
typedef struct st_x502_devrec_inptr t_x502_devrec_inptr;
typedef struct {
    uint32_t sign;  
    char devname[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    char location[X502_LOCATION_STR_SIZE]; 
    uint32_t flags; 
    uint8_t  iface; 
    uint8_t  location_type; 
    char res[122];  
    t_x502_devrec_inptr* internal; 
} t_x502_devrec;
typedef struct st_x502* t_x502_hnd;
typedef char (*t_x502_serial_list)[X502_SERIAL_SIZE];
typedef struct {
    double offs; 
    double k; 
} t_x502_cbr_coef;
typedef struct {
    t_x502_cbr_coef adc[X502_ADC_RANGE_CNT];
    uint32_t res1[64]; 
    t_x502_cbr_coef dac[X502_DAC_CH_CNT];
    uint32_t res2[20]; 
} t_x502_cbr;
typedef struct {
    char name[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    uint32_t devflags; 
    uint16_t fpga_ver; 
    uint8_t  plda_ver; 
    uint8_t  board_rev; 
    uint32_t mcu_firmware_ver; 
    uint8_t  factory_mac[X502_MAC_ADDR_SIZE]; 
    uint8_t res[110]; 
    t_x502_cbr cbr; 
} t_x502_info;
X502_EXPORT(t_x502_hnd) X502_Create(void);
X502_EXPORT(int32_t) X502_Free(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_OpenByDevRecord(t_x502_hnd hnd, const t_x502_devrec *devrec);
X502_EXPORT(int32_t) X502_FreeDevRecordList(t_x502_devrec *list, uint32_t size);
X502_EXPORT(int32_t) X502_Close(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_GetDevInfo(t_x502_hnd hnd, t_x502_info* info);
X502_EXPORT(int32_t) X502_Configure(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_SetLChannel(t_x502_hnd hnd, uint32_t lch, uint32_t phy_ch,
                                       uint32_t mode, uint32_t range, uint32_t avg);
X502_EXPORT(int32_t) X502_SetLChannelCount(t_x502_hnd hnd, uint32_t lch_cnt);
X502_EXPORT(int32_t) X502_GetLChannelCount(t_x502_hnd hnd, uint32_t* lch_cnt);
X502_EXPORT(int32_t) X502_SetAdcFreqDivider(t_x502_hnd hnd, uint32_t adc_freq_div);
X502_EXPORT(int32_t) X502_SetAdcInterframeDelay(t_x502_hnd hnd, uint32_t delay);
X502_EXPORT(int32_t) X502_SetDinFreqDivider(t_x502_hnd hnd, uint32_t din_freq_div);
X502_EXPORT(int32_t) X502_SetOutFreqDivider(t_x502_hnd hnd, uint32_t out_freq_div);
X502_EXPORT(int32_t) X502_SetAdcFreq(t_x502_hnd hnd, double *f_acq, double *f_frame);
X502_EXPORT(int32_t) X502_SetDinFreq(t_x502_hnd hnd, double *f_din);
X502_EXPORT(int32_t) X502_SetOutFreq(t_x502_hnd hnd, double *f_dout);
X502_EXPORT(int32_t) X502_GetAdcFreq(t_x502_hnd hnd, double *f_acq, double *f_frame);
X502_EXPORT(int32_t) X502_SetRefFreq(t_x502_hnd hnd, uint32_t freq);
X502_EXPORT(int32_t) X502_SetExtRefFreqValue(t_x502_hnd hnd, double freq);
X502_EXPORT(int32_t) X502_GetRefFreqValue(t_x502_hnd hnd, double *freq);
X502_EXPORT(int32_t) X502_SetSyncMode(t_x502_hnd hnd, uint32_t sync_mode);
X502_EXPORT(int32_t) X502_SetSyncStartMode(t_x502_hnd hnd, uint32_t sync_start_mode);
X502_EXPORT(int32_t) X502_SetMode(t_x502_hnd hnd, uint32_t mode);
X502_EXPORT(int32_t) X502_GetMode(t_x502_hnd hnd, uint32_t* mode);
X502_EXPORT(int32_t) X502_SetAdcCoef(t_x502_hnd hnd, uint32_t range, double k, double offs);
X502_EXPORT(int32_t) X502_GetAdcCoef(t_x502_hnd hnd, uint32_t range, double* k, double* offs);
X502_EXPORT(int32_t) X502_SetDacCoef(t_x502_hnd hnd, uint32_t ch, double k, double offs);
X502_EXPORT(int32_t) X502_GetDacCoef(t_x502_hnd hnd, uint32_t ch, double* k, double* offs);
X502_EXPORT(int32_t) X502_AsyncOutDac(t_x502_hnd hnd, uint32_t ch, double data, uint32_t flags);
X502_EXPORT(int32_t) X502_AsyncOutDig(t_x502_hnd hnd, uint32_t val, uint32_t msk);
X502_EXPORT(int32_t) X502_AsyncInDig(t_x502_hnd hnd, uint32_t* din);
X502_EXPORT(int32_t) X502_AsyncGetAdcFrame(t_x502_hnd hnd, uint32_t flags,
                                       uint32_t tout, double* data);
X502_EXPORT(int32_t) X502_StreamsEnable(t_x502_hnd hnd, uint32_t streams);
X502_EXPORT(int32_t) X502_StreamsDisable(t_x502_hnd hnd, uint32_t streams);
X502_EXPORT(int32_t) X502_GetEnabledStreams(t_x502_hnd hnd, uint32_t* streams);
X502_EXPORT(int32_t) X502_StreamsStart(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_StreamsStop(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_IsRunning(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_Recv(t_x502_hnd hnd, uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_Send(t_x502_hnd hnd, const uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_ProcessAdcData(t_x502_hnd hnd, const uint32_t* src,
                                          double *dest, uint32_t *size, uint32_t flags);
X502_EXPORT(int32_t) X502_ProcessData(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                     uint32_t flags, double *adc_data, uint32_t *adc_data_size,
                     uint32_t *din_data, uint32_t *din_data_size);
X502_EXPORT(int32_t) X502_ProcessDataWithUserExt(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                                   uint32_t flags, double *adc_data,
                                   uint32_t *adc_data_size, uint32_t *din_data,
                                   uint32_t *din_data_size,
                                   uint32_t *usr_data, uint32_t *usr_data_size);
X502_EXPORT(int32_t) X502_PrepareData(t_x502_hnd hnd, const double* dac1, const double* dac2,
                            const uint32_t* digout, uint32_t size, int32_t flags,
                            uint32_t* out_buf);
X502_EXPORT(int32_t) X502_GetRecvReadyCount(t_x502_hnd hnd, uint32_t *rdy_cnt);
X502_EXPORT(int32_t) X502_GetSendReadyCount(t_x502_hnd hnd, uint32_t *rdy_cnt);
X502_EXPORT(int32_t) X502_GetNextExpectedLchNum(t_x502_hnd hnd, uint32_t *lch);
X502_EXPORT(int32_t) X502_PreloadStart(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_OutCycleLoadStart(t_x502_hnd hnd, uint32_t size);
X502_EXPORT(int32_t) X502_OutCycleSetup(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutCycleStop(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutCycleCheckSetupDone(t_x502_hnd hnd, uint32_t *done);
X502_EXPORT(int32_t) X502_OutGetStatusFlags(t_x502_hnd hnd, uint32_t *status);
X502_EXPORT(int32_t) X502_SetStreamBufSize(t_x502_hnd hnd, uint32_t ch, uint32_t size);
X502_EXPORT(int32_t) X502_SetStreamStep(t_x502_hnd hnd, uint32_t dma_ch, uint32_t step);
X502_EXPORT(int32_t) X502_BfLoadFirmware(t_x502_hnd hnd, const char* filename);
X502_EXPORT(int32_t) X502_BfCheckFirmwareIsLoaded(t_x502_hnd hnd, uint32_t *version);
X502_EXPORT(int32_t) X502_BfMemRead(t_x502_hnd hnd, uint32_t addr, uint32_t* regs,
                                      uint32_t size);
X502_EXPORT(int32_t) X502_BfMemWrite(t_x502_hnd hnd, uint32_t addr,
                                      const uint32_t* regs, uint32_t size);
X502_EXPORT(int32_t) X502_BfExecCmd(t_x502_hnd hnd, uint16_t cmd_code, uint32_t par,
                                    const uint32_t* snd_data, uint32_t snd_size,
                                    uint32_t* rcv_data, uint32_t rcv_size,
                                    uint32_t tout, uint32_t* recvd_size);